--- a/app/src/main/res/layout/card_captioned_image.xml
+++ b/app/src/main/res/layout/card_captioned_image.xml
@@ -4,9 +4,9 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
-    android:layout_marginBottom="15dp"
-    card_view:cardElevation="25dp"
+    android:layout_height="200dp"
+    android:layout_margin="5dp"
+    card_view:cardElevation="12dp"
     card_view:cardCornerRadius="5dp"
     card_view:cardPreventCornerOverlap="true">
 
@@ -21,8 +21,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:scaleType="centerCrop"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
+            android:layout_margin="4dp"
             />
 
         <TextView
