--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,11 +2,12 @@
 
 
 <android.support.design.widget.CoordinatorLayout
-xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-android:id="@+id/coordinator"
-android:layout_height="match_parent"
-android:layout_width="match_parent">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/coordinator"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent">
 
     <android.support.design.widget.AppBarLayout
         android:layout_height="325dp"
@@ -39,29 +40,48 @@ android:layout_width="match_parent">
         android:layout_height="wrap_content"
         app:layout_behavior='@string/appbar_scrolling_view_behavior'>
 
-        <LinearLayout
+        <android.support.constraint.ConstraintLayout
             android:id="@+id/detail_constraint"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="150dp"
-            android:layout_height="75dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="5dp"
-            android:src="@drawable/logo" />
+                android:id="@+id/imageView2"
+                android:layout_width="150dp"
+                android:layout_height="75dp"
+                android:layout_gravity="center"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:elevation="20dp"
+                android:src="@drawable/logo"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/fragment_view"
                 android:name="edu.uncw.seahawktours.BuildingListFragment"
                 android:layout_width="match_parent"
                 android:layout_height="500dp"
-                android:layout_marginTop="25dp"/>
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
-        </LinearLayout>
+        </android.support.constraint.ConstraintLayout>
 
     </android.support.v4.widget.NestedScrollView>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:src="@drawable/location_logo"
+        android:tint="@color/white"
+        android:layout_margin="16dp"/>
 </android.support.design.widget.CoordinatorLayout>
